<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imgLogoHeader"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo_my_informatika2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tvHeaderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgLogoHeader"
        app:layout_constraintStart_toEndOf="@+id/imgLogoHeader"
        app:layout_constraintTop_toTopOf="@+id/imgLogoHeader" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imgLogoHeader"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/background_white_card"
            android:orientation="vertical"
            android:padding="24dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/baseline_account_circle_24"
                app:civ_border_color="@color/secondaryblue900"
                app:civ_border_width="2dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_photo"
                android:textColor="@color/primaryblue600"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fullname"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_full_name"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/id_number"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etIdNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_id_number"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/entry_date"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:endIconMode="custom"
                    app:endIconDrawable="@drawable/baseline_calendar_month_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEntryDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select_date"
                        android:focusable="false"
                        android:clickable="true"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/user_type"
                android:labelFor="@+id/autoCompleteUserType"
                android:textColor="@color/black"
                android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/MyOutlinedDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_user_type">
                <AutoCompleteTextView
                    android:id="@+id/autoCompleteUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/black"
                    android:theme="@style/MyDropdownThemeOverlay"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/black"/>
                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/female"
                    android:textColor="@color/black"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/no_hp"
                        android:inputType="phone"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/pass"
                android:textColor="@color/black"
                android:textStyle="bold"/>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_a_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingVertical="12dp"
                android:text="@string/register"
                android:textColor="@color/white"/> </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>