<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GettingStartedActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerImages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="3:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_card_rounded_top"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:paddingTop="32dp"
        android:paddingBottom="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/indicatorContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:id="@+id/indicator1"
                android:layout_width="24dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/indicator_bar_active" />

            <View
                android:id="@+id/indicator2"
                android:layout_width="24dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/indicator_bar_default" />

            <View
                android:id="@+id/indicator3"
                android:layout_width="24dp"
                android:layout_height="4dp"
                android:layout_marginHorizontal="4dp"
                android:background="@drawable/indicator_bar_default" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_title2"
            android:textColor="@color/primaryblue600"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingVertical="14dp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="12dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>