<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F4F6FA"
    tools:context=".AdminFeedbackActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarFeedback"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="16dp"
                android:layout_marginLeft="-20dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvToolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/feedback_list_title"
                android:textColor="@color/primaryblue800"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivBack"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.513" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/searchField"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginStart="10dp"
            android:hint="@string/search_hint"
            android:inputType="text"
            android:autofillHints="text"
            android:background="@drawable/background_edit"
            android:paddingHorizontal="12dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/filterCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/category"
            app:backgroundTint="#1976D2" />

        <Button
            android:id="@+id/filterDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/date"
            app:backgroundTint="#1976D2"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:elevation="2dp">

        <TextView
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:text=""
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/header_action"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feedbackRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        android:layout_marginTop="2dp"
        tools:ignore="SpeakableTextPresentCheck"/>
</LinearLayout>